# mcp-reasoning

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AI_AGENT_FEATURE_PROPOSAL.md  ALL_SYSTEMS_GO.md  CHANGELOG.md  CHOCOLATEY_SUBMIT_READY.md  CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  DEMO_RESULTS.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  INSTALLATION_COMPLETE.md  INSTALLATION_SUCCESS.md  MEMORY_TOOLS_IMPLEMENTATION.md  NEXT_BIG_FEATURE.md  NPM_PUBLISH_READY.md  PROJECT_COMPLETE.md  PUBLISH_NOW.md  README.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  RELEASE_CREATED.md  RELEASE_LIVE.md  REMAINING_METADATA_WORK.md  TESTING_RESULTS.md  codecov.yml  configure.sh  docker-compose.yml  install.ps1  install.sh  test_memory_tools.py
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  coverage.yml  docker.yml  release.yml  security.yml
benches/: dashboard_emit.rs  reasoning_benchmarks.rs
choco/: mcp-reasoning.0.1.0.nupkg  mcp-reasoning.nuspec
choco/tools/: chocolateyinstall.ps1
claudedocs/: ARCHITECTURE_IMPROVEMENTS.md
docs/: BRANCH_PROTECTION.md  DEPENDENCY_DEDUPLICATION_PLAN.md  DEPENDENCY_DEDUP_STATUS.md  DESIGN.md  DOCUMENTATION_AUDIT.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  METADATA_ENRICHMENT_PLAN.md  METADATA_FINAL_SUMMARY.md  METADATA_IMPLEMENTATION_STATUS.md  METADATA_PHASE3_COMPLETE.md  MODE_PATTERN.md  PEDANTIC_LINT_FIX_PLAN.md  PRE_COMMIT_SETUP.md  README.md  REMEDIATION_PLAN.md  SELF_IMPROVEMENT_INTEGRATION.md  SILENT_FAILURES_FIX_PLAN.md  TEST_ERROR_HANDLING_PLAN.md  TIERED_TIMEOUTS.md  TOOL_COMPOSITION_AND_ERROR_GUIDANCE_PLAN.md  TOOL_REFERENCE.md
docs/archive/: DEPENDENCY_DEDUP_STATUS.md  DESIGN_ORIGINAL.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  METADATA_FINAL_SUMMARY.md  METADATA_IMPLEMENTATION_STATUS.md  METADATA_PHASE3_COMPLETE.md  TEST_ERROR_HANDLING_PLAN.md
docs/design/: CORRECTIVE_SELECTION.md  DASHBOARD.md  DETERMINISTIC_LAYER.md  EVAL_DATASET_PLAN.md  EVAL_HARNESS_PLAN.md  INSTALLATION_IMPROVEMENTS.md  MEMORY_LAYER.md  NEW_SERVER_DESIGN.md  NEXT_REASONING_SERVER.md  OFFLOAD_LANDSCAPE.md  PREFERENCE_ELICITATION.md  RESEARCH_PRIMITIVE.md  SELF_IMPROVEMENT.md  SILENT_FAILURES_FIX_PLAN.md  THEORY_OF_MIND.md  TIERED_TIMEOUTS.md  TOOL_COMPOSITION_AND_ERROR_GUIDANCE_PLAN.md  WATCHDOG_LAYER.md
docs/guides/: CONTRIBUTING.md  DEVELOPMENT.md  PRE_COMMIT_SETUP.md  TESTING.md
docs/operations/: BRANCH_PROTECTION.md  CLEANUP_NOTES.md
docs/reference/: API_SPECIFICATION.md  ARCHITECTURE.md  END_TO_END_FLOW.md  FLOW_OVERVIEW.md  IMPLEMENTATION_DETAILS.md  LESSONS_LEARNED.md  MODE_PATTERN.md  TOOL_REFERENCE.md
docs/reference/diagrams/: flow-overview.d2
eval/data/: aime_hard.jsonl  perturbed_pilot.jsonl  seed_arithmetic.jsonl
homebrew/: mcp-reasoning.rb
migrations/: 001_initial_schema.sql  002_si_actions_unique_diagnosis.sql  003_tool_timing_history.sql  004_memory_tools.sql  005_agents.sql  006_tool_effectiveness.sql  007_thoughts_fts.sql  008_si_action_type_stats.sql  009_heal_knowledge.sql  010_heal_fix_proposals.sql  011_heal_proposal_invariant.sql
npm/: .npmignore  LICENSE  README.md  index.js  install.js  package.json
specs/001-heal-parse-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-heal-parse-schema/checklists/: requirements.md
specs/001-heal-parse-schema/contracts/: internal-interfaces.md
specs/002-heal-repair-safety/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-heal-repair-safety/checklists/: requirements.md
specs/002-heal-repair-safety/contracts/: internal-interfaces.md
spikes/: verify_spike.py
src/: lib.rs  main.rs  test_utils.rs
src/agents/: communication.rs  coordinator.rs  core.rs  decomposer.rs  executor.rs  learning.rs  metrics.rs  mod.rs  registry.rs  team.rs  team_registry.rs  types.rs
src/anthropic/: client.rs  config.rs  mod.rs  streaming.rs  types.rs
src/config/: mod.rs  secret.rs  self_improvement.rs  validation.rs
src/dashboard/: bus.rs  config.rs  event.rs  mod.rs  server.rs
src/dashboard/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/error/: enhanced.rs  mod.rs
src/eval/: mod.rs  report.rs  runner.rs  scorer.rs  solver.rs  stats.rs  task.rs
src/metadata/: builder.rs  mod.rs  preset_index.rs  suggestions.rs  timing.rs  timing_defaults.rs
src/metrics/: mod.rs
src/modes/: auto.rs  checkpoint.rs  core.rs  counterfactual.rs  divergent.rs  linear.rs  meta.rs  mod.rs  tree.rs
src/modes/decision/: mod.rs  parsing.rs  types.rs  verify.rs
src/presets/: mod.rs
src/prompts/: core.rs  counterfactual.rs  decision.rs  detect.rs  evidence.rs  graph.rs  mcts.rs  mod.rs  timeline.rs
src/self_improvement/: allowlist.rs  analyzer.rs  anthropic_calls.rs  baseline.rs  circuit_breaker.rs  cli.rs  executor.rs  heal_cycle.rs  heal_manager.rs  heal_review.rs  learner.rs  manager.rs  mod.rs  monitor.rs  sensor.rs  storage.rs  system.rs  types.rs
src/server/: mcp.rs  metadata_builders.rs  mod.rs  params.rs  progress.rs  requests.rs  responses.rs  tools.rs  transport.rs  types.rs
src/skills/: builtin.rs  discovery.rs  executor.rs  mod.rs  registry.rs  types.rs
src/storage/: actions.rs  agent_metrics.rs  branch.rs  checkpoint.rs  core.rs  embedding_queue.rs  embeddings.rs  graph.rs  metrics.rs  mod.rs  session.rs  thought.rs  trait_impl.rs  types.rs
src/traits/: mod.rs  types.rs
src/voyage/: client.rs  mod.rs  types.rs
tests/: dashboard_sidecar.rs  eval_dataset.rs  eval_runner.rs  eval_scorer.rs  eval_sensor.rs  eval_stats.rs  integration_tests.rs  tool_handler_tests.rs  workflows.rs
tests/common/: mod.rs
tests/integration/: error_recovery.rs  mod.rs  multi_mode.rs  session_workflow.rs  workflow_agent.rs  workflow_checkpoint.rs  workflow_graph.rs  workflow_preset.rs  workflow_skill.rs  workflow_tree.rs
(+113 files in other folders)
